# c-api

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  controller.c  controller.h  jsonplaceholder-api.c  jsonplaceholder-api.h  main.c  respond.c  respond.h  router.c  router.h  server.c  server.h
